--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -28,53 +28,46 @@
   </head>
   
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'index' %}">Hello World Blog!</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <!---Account  Menu Code-->
-                    <li class="nav-item dropdown">
-             {% if caty_menu %}
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    {{ user.first_name }} {{ user.last_name }}</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    {% if user.profile.user %}
-                        <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
-                        <li><a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a></li>
-                        <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
-                        <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
-                    {% endif %}
-                    </ul>
-
-                    {% endif %}
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'post' %}">Post your message</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Register Now</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Sign in</a>
-                    </li>
-                </li>
-             {% endif %}
-          </ul>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'index' %}">Hello World Blog!</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'post' %}">Post your message</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
+              </li>
+              {% if user.is_authenticated %}
+                   <li class="nav-item dropdown">
+                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ user.first_name }} {{ user.last_name }}</a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
+                             <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
+                             
+                           {% if user.profile.id %}
+                                
+                                <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
+                              {% else %}
+                                <li><a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile</a></li>
+                            {% endif %}
+                                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a>    
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                          </li>
+               {% endif %}
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-
+      </nav>
+    
    
    
    {% block content %}
