--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -16,10 +16,10 @@
               <div class="card mb-4">
                 <div class="card-body">
                   <div class="image-container">
-                    {% if "placeholder" in post.featured_image.url %}
-                    <img class="card-img-top" src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg" alt="card-img">
+                    {% if "placeholder" in post.header_img.url %}
+                     <img class="card-img-top" src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg" alt="card-img">
                     {% else %}
-                    <img class="card-img-top" src="{{ post.image.url }}">
+                     <img class="card-img-top" src="{{ post.header_img.url }}">
                     {% endif %}
                      <a href="{% url 'details-article' post.pk  %}" class="post-link">
                       <h2 class="card-title">{{ post.title }}</h2>
