--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -2,64 +2,63 @@
 
 {% block content %}
 
-<div class="main-base">
-  <div class="banner">
-    <div class="image-banner">
-    </div>
-    <div class="container-fluid">
-      <div class="row">
+<div class="container-fluid">
+    <div class="row">
+
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
-          <div class="row">
-            {% for post in post_list %}
-            <div class="col-md-4">
-              <div class="card mb-4">
-                <div class="card-body">
-                  <div class="image-container">
-                    {% if "placeholder" in post.header_img.url %}
-                     <img class="card-img-top" src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg" alt="card-img">
-                    {% else %}
-                     <img class="card-img-top" src="{{ post.header_img.url }}">
-                    {% endif %}
-                     <a href="{% url 'details-article' post.pk  %}" class="post-link">
-                      <h2 class="card-title">{{ post.title }}</h2>
-                    </a>
-                    <div class="image-flash">
-                      <p class="author">Author: {{ post.author }}</p>
-                      <p class="card-text">{{ post.body|slice:":200"|safe }}</p>
-
+            <div class="row">
+                {% for post in post_list %}
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="image-container">
+                                {% if "placeholder" in post.featured_image.url %}
+                                <img class="card-img-top"
+                                    src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
+                                {% else %}
+                                <img class="card-img-top" src=" {{ post.header_img.url  }}">
+                                {% endif %}
+                                <div class="image-flash">
+                                    <p class="author">Author: {{ post.author }}</p>
+                                </div>
+                            </div>
+                            <a href="{% url 'details-article' post.pk  %}" class="post-link">
+                                <h2 class="card-title">{{ post.title }}</h2>
+                            </a>
+                            <div class="image-flash">
+                              <p class="author">Author: {{ post.author }}</p>
+                              <p class="card-text">{{ post.body|slice:":200"|safe }}</p>
+        
+                            </div>
+                            <hr />
+                            <p class="card-text text-muted h6">{{ post.publish_date}}</p>
+                            <p class="fa fa-thumbs-o-up" aria-hidden="true">{{post.post_like }}</i>
+                        </div>
                     </div>
-                  </div>
-                  <hr />
-                  <p class="card-text text-muted h6">{{ post.publish_date}}</p>
-                  <p class="fa fa-thumbs-o-up" aria-hidden="true">{{post.post_like }}</i>
                 </div>
-              </div>
+                {% if forloop.counter|divisibleby:3 %}
             </div>
-            {% if forloop.counter|divisibleby:3 %}
-          </div>
-          <div class="row">
-            {% endif %}
-            {% endfor %}
+            <div class="row">
+                {% endif %}
+                {% endfor %}
 
-          </div>
+            </div>
         </div>
-      </div>
-      {% if is_paginated %}
-      <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-          {% if page_obj.has_previous %}
-          <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-          {% endif %}
-          {% if page_obj.has_next %}
-          <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-
-          {% endif %}
-        </ul>
-      </nav>
-      {% endif %}
     </div>
-  </div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
 </div>
 
 
