--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -43,6 +43,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">Register</a>
+              </li>
               {% if user.is_authenticated %}
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
